# custom-technical-lineage-examples

./: .gitignore  CHANGELOG.md  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pipeline.yml
src/: edge.py  exceptions.py  helper.py  models.py
tests/: test_helper.py  test_ingest_csv.py  test_translate_to_batch_format.py
tests/test_data/: lineage.json
tests/test_data/conversion/: lineage.json  lineage_v3.json  lineage_v3_no_source_code.json  metadata.json  transforms.sql
tests/test_data/csv/: db1.csv  file.csv  lineage_v3.json  metadata.json
tools/: collect_assets_fullname.py  collect_assets_type.py  example.py  example_with_props.py  ingest_csv.py  translate_to_batch_format.py
