[metadata]
name = custom-technical-lineage
version = 1.3.0
author = Kristof Van Coillie
author_email = kristof.vancoillie@collibra.com
description = Helper scripts for custom technical lineage
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/collibra/custom-technical-lineage-examples
project_urls =
    Bug Tracker = https://github.com/collibra/custom-technical-lineage-examples/issues

[options]
python_requires = >=3.11
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[flake8]
max-line-length = 120
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
    # Unused import (happens when using typing.TYPE_CHECKING).
    F401,
exclude = 
    .venv